--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,18 @@
     box-sizing: border-box;
 }
 
-.flex {
+.flex_bet {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+}
+
+.flex_centered{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
 
 }
 
@@ -15,6 +23,7 @@ header{
     background-color: #FF6900;
     flex-direction: column;
     height: 55px;
+    margin-bottom: 2rem;
 }
 
 .container{
@@ -31,3 +40,17 @@ header{
     display: inline;
     color: white;
 }
+
+/* .card {
+    display: inline-block;
+}
+
+.list_product { 
+    width: 80%;
+    text-align: center;
+
+
+}
+.product_image img {
+    width: 50%;
+} */
