--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+
+
 .flex_bet {
     display: flex;
     align-items: center;
@@ -23,11 +28,11 @@ header{
     background-color: #FF6900;
     flex-direction: column;
     height: 55px;
-    margin-bottom: 2rem;
+    /* margin-bottom: 2rem; */
 }
 
 .container{
-    width: 80%;
+    width: 70%;
     margin: .8rem;
 }
 
@@ -41,16 +46,59 @@ header{
     color: white;
 }
 
-/* .card {
-    display: inline-block;
+.padding_bottom {
+    padding-bottom: 2rem;
 }
 
 .list_product { 
-    width: 80%;
+    /* width: 100%; */
     text-align: center;
+    padding: 3rem 2rem;
+    max-width: 1300px;
+    margin: 0 auto;
+} 
 
+
+
+.card {
+    display: inline-block;
+}
+
+.product_img {
+    width: 20rem;
+    margin: .5rem;
 
 }
-.product_image img {
-    width: 50%;
-} */
+
+div.product p {
+    text-align: left;
+}
+
+.font_small {
+    font-size: .8rem;
+    padding-left: 0.5rem;  
+}
+
+.product_name{
+    text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: bold;
+    padding-left: 0.5rem;  
+}
+
+.price{
+    font-size: 1.2rem;
+    padding-left: 0.5rem;  
+    color:red;
+    font-weight: 500;
+
+}
+
+.old_price{
+    font-size: .8rem;
+    padding-left: 0.5rem;  
+    opacity: 0.5;
+    color: #000;
+    text-decoration: line-through;
+
+}
